[package]
name = "liquivel-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
postcard = { version = "1.0.2", features = ["use-std"] }
ron = "0.7.1"
serde = { version = "1.0.143", features = ["derive"] }
